trying to add css

--- a/webServerAndSites/Pages/index.html
+++ b/webServerAndSites/Pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-family:'Courier New', Courier, monospace; color: #00000000;">
 	<head>
 		<meta charset="utf-8">
 		<title>CSE-FP-CS30-V2</title>
