--- a/webServerAndSites/index.html
+++ b/webServerAndSites/index.html
@@ -10,6 +10,27 @@
 <body>
 	<h1>Hello world!</h1>
 	<p>Text from C server!</p>
+	<div class="divUserInput">
+		<form method="post" class="chatMessages" enctype="multiport/form-data">
+			<div class="divMessage">
+				<label for="message">Message:</label>
+				<br>
+				<textarea class="messageTextArea" id="message" name="message" placeholder="Enter Chat Message" required></textarea>
+				<br>
+			</div>
+
+			<br>
+			<div class="divImage">
+				<label for="image">Image:</label>
+				<br>
+				<input type="file" id="image" accept="image/*"><br>
+			</div>
+			<br>
+			<input class="submit" type="submit" value="submit">
+		</form>
+
+	</div>
+
 
 </body>
 </html>
