--- a/webServerAndSites/index.html
+++ b/webServerAndSites/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="index.js"></script>
-	<title></title>
+	<title>Local Chat Server</title>
 </head>
 <body>
 	<h1>Hello world!</h1>
