--- a/webServerAndSites/index.html
+++ b/webServerAndSites/index.html
@@ -8,31 +8,20 @@
 	<title>Local Chat Server</title>
 </head>
 <body>
-	<h1>Hello world!</h1>
-	<p>Text from C server!</p>
-	<div class="divUserInput">
-		<form method="post" id="chatMessages" class="chatMessages" enctype="multipart/form-data">
-			<div class="divMessage">
-				<label for="message">Message:</label>
-				<br>
-				<textarea class="messageTextArea" id="message" name="message" placeholder="Enter Chat Message"></textarea>
-				<br>
-			</div>
-
-			<br>
-			<div class="divImage">
-				<label for="image">Image:</label>
-				<br>
-				<input type="file" id="image" name="image" accept="image/*"><br>
-			</div>
-			<br>
-			<input class="submit" type="submit" value="submit">
-			<br>
-		</form>
+	<h1>Text Messaging App</h1>
+	<div id="userDisplay" class="userDisplay">
+		
 	</div>
 
-	<div id="divUserDisplay" class="divUserDisplay">
-		
+	<div class="userInput">
+		<form method="post" id="chatMessages" class="chatMessages" enctype="multipart/form-data">
+			<div class="divInput">
+				<textarea class="messageTextArea" id="message" name="message" placeholder="Enter Chat Message"></textarea>
+				<input class="fileSubmit" type="file" id="image" name="image" accept="image/*">
+				<input class="submit" type="submit" value="submit">
+
+			</div>
+		</form>
 	</div>
 
 
