--- a/webServerAndSites/index.html
+++ b/webServerAndSites/index.html
@@ -16,11 +16,12 @@
 	<div class="userInput">
 		<form method="post" id="chatMessages" class="chatMessages" enctype="multipart/form-data">
 			<div class="divInput">
-				<textarea class="messageTextArea" id="message" name="message" placeholder="Enter Chat Message"></textarea>
+				<textarea maxlength="4096" class="messageTextArea" id="message" name="message" placeholder="Enter Chat Message"></textarea>
 				<input class="fileSubmit" type="file" id="image" name="image" accept="image/*">
 				<input class="submit" type="submit" value="submit">
-
 			</div>
+
+
 		</form>
 	</div>
 
